--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,351 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
+    <title>Test</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="scripts/main.js" defer></script>
-  </head>
-  <body>
-    <h1>Landing Page</h1>
-  </body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  </head> 
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__page">
+          <div class="header__top">
+            <a href="" class="header__logo">
+              <img src="images/logo.svg" alt="Bulls Logo">
+            </a>
+            <nav class="header__nav">
+              <ul class="header__list">
+                <li class="header__item">
+                  <a href="" class="header__link">Home</a>
+                </li>
+                <li class="header__item">
+                  <a href="" class="header__link">60-day Trading Boot Camp</a>
+                </li>
+                <li class="header__item">
+                  <a href="" class="header__link">Day Trading</a>
+                </li>
+                <li class="header__item">
+                  <a href="" class="header__link">Options Course & Chatroom</a>
+                </li>
+                <li class="header__item">
+                  <a href="" class="header__link">On Demand trading Courses</a>
+                </li>
+                <li class="header__item">
+                  <a href="" class="header__link">About</a>
+                </li>
+                <li class="header__item">
+                  <a href="" class="header__link">FAQ</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="header__login-block">
+              <button class="header__search"></button>
+              <button class="header__login">Login</button>
+            </div>
+          </div>
+          <div class="header__body">
+            <div class="header__main">
+              <div class="header__content">
+                <h1 class="header__title">Transform Your Tranding Over 60-Days</h1>
+
+                <div class="header__line"></div>
+        
+                <p class="header__text">
+                  Learn the BOWS tranding system with a combined 40+ years of tranding experience; live in a university-like setting
+                </p>
+                <button class="header__apply-button">Apply For 60-Day Boot Camp</button>
+              </div>
+              <div class="header__bottom">
+                <p class="header__text-bottom">
+                  We have been featured in...
+                </p>
+                <div class="header__icons">
+                  <div class="header__icon-block">
+                    <a href="" class="header__icon">
+                      <img src="images/header/forbes.svg" alt="Forbes" class="header__icon-image">
+                    </a>
+                    <a href="" class="header__icon">
+                      <img src="images/header/thrive-global.svg" alt="Thrive Global" class="header__icon-image">
+                    </a>
+                  </div>
+                  <div class="header__icon-block">
+                    <a href="" class="header__icon">
+                      <img src="images/header/cnbc.svg" alt="CNBC" class="header__icon-image">
+                    </a>
+                    <a href="" class="header__icon">
+                      <img src="images/header/business-insider.svg" alt="Business Insider" class="header__icon-image">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="header__image"></div>
+          </div>
+        </div>
+      </div>
+    </header> 
+ 
+    <main class="main">
+      <section class="swing-trade">
+        <div class="container">
+          <div class="swing-trade__content">
+            <div class="swing-trade__top">
+              <h2 class="swing-trade__title">Do You Day Or Swing Trade?</h2>
+              <p class="swing-trade__subtitle">We offer <span class="swing-trade__subtitle--text--green">two premium</span> packages based on your style of trading</p>
+              <div class="swing-trade__arrow-block">
+                <div class="swing-trade__switcher-block">
+                  <span class="swing-trade__switcher-text swing-trade__switcher-text--month">Mothly</span>
+                  <div class="swing-trade__switcher"></div>
+                  <span class="swing-trade__switcher-text swing-trade__switcher-text--color--white swing-trade__switcher-text--year">Yearly</span>
+                </div>
+                <div class="swing-trade__arrow"></div>
+              </div>
+            </div>
+            <div class="swing-trade__main-phone">
+              <div class="swing-trade__block">
+                <div class="swing-trade__subscription">
+                  <h3 class="swing-trade__name">Day Trader Subscription</h3>
+                  <div class="swing-trade__price-block">
+                    <span class="swing-trade__price swing-trade__price--cheap">$199</span>
+                    <span class="swing-trade__price-text">/ month</span>
+                  </div>
+                </div>
+                <div class="swing-trade__list">
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Accelerated Course</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Bulls Vision (Screenshare With Kunal Live Trading)</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Daily Watchlists</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Real Time Trade Ideas</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Live Market Recaps & Analysis</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Daily Market Recaps & Analysis</span>
+                    <div class="swing-trade__item-check"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Live Mentorship Sessions</span>
+                    <div class="swing-trade__item-check"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">On-Going Live Mentorship Classes</span>
+                    <div class="swing-trade__item-check"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Sunday Market Huddle</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Tc2000 Trading Scans</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Tc2000 Charting Layouts</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Tc2000 Advanced Platform Tutorials</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Tc2000 Charting Layouts</span>
+                    <div class="swing-trade__item-check"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Access To Day Trading Discord Room (Mobile Friendly)</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                </div>
+                <button class="swing-trade__button">Sign up!</button>
+              </div>
+
+              <div class="swing-trade__block">
+                <div class="swing-trade__subscription">
+                  <h3 class="swing-trade__name">Swing Trader Subscription</h3>
+                  <div class="swing-trade__price-block">
+                    <span class="swing-trade__price swing-trade__price--expensive">$199</span>
+                    <span class="swing-trade__price-text">/ month</span>
+                  </div>
+                </div>
+                <div class="swing-trade__list">
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Accelerated Course</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Bulls Vision (Screenshare With Kunal Live Trading)</span>
+                    <div class="swing-trade__item-check"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Daily Watchlists</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Real Time Trade Ideas</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Live Market Recaps & Analysis</span>
+                    <div class="swing-trade__item-check"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Daily Market Recaps & Analysis</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Live Mentorship Sessions</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">On-Going Live Mentorship Classes</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Sunday Market Huddle</span>
+                    <div class="swing-trade__item-check"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Tc2000 Trading Scans</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Tc2000 Charting Layouts</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Tc2000 Advanced Platform Tutorials</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Tc2000 Charting Layouts</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                  <div class="swing-trade__item">
+                    <span class="swing-trade__item-name">Access To Day Trading Discord Room (Mobile Friendly)</span>
+                    <div class="swing-trade__item-check swing-trade__item-check--color-green"></div>
+                  </div>
+                </div>
+                <button class="swing-trade__button">Sign up!</button>
+              </div>
+            </div>
+
+            <div class="swing-trade__main-desktop">
+              <div class="swing-trade__blocks">
+                <div class="swing-trade__item">
+                  <div class="swing-trade__item-name">Accelerated Course</div>
+                  <div class="swing-trade__item-check swing-trade__item-check--position">
+                    <div class="swing-trade__subscription swing-trade__subscription--desktop">
+                      <h3 class="swing-trade__name">Day Trader Subscription</h3>
+                      <div class="swing-trade__price-block">
+                        <span class="swing-trade__price swing-trade__price--cheap">$199</span>
+                        <span class="swing-trade__price-text">/ month</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swing-trade__item-check swing-trade__item-check--position">
+                    <div class="swing-trade__subscription swing-trade__subscription--desktop">
+                      <h3 class="swing-trade__name">Swing Trader Subscription</h3>
+                      <div class="swing-trade__price-block">
+                        <span class="swing-trade__price swing-trade__price--expensive">$300</span>
+                        <span class="swing-trade__price-text">/ month</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Bulls Vision (Screenshare With Kunal Live Trading)</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Daily Watchlists</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Real Time Trade Ideas</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Live Market Recaps & Analysis</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Daily Market Recaps & Analysis</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">On-Going Live Mentorship Classes</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Sunday Market Huddle</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Live Mentorship Sessions</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Tc2000 Trading Scans</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Tc2000 Charting Layouts</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Tc2000 Advanced Platform Tutorials</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Tc2000 Charting Layouts</span>
+                  <div class="swing-trade__item-check"></div>
+                  <div class="swing-trade__item-check"></div>
+                </div>
+                <div class="swing-trade__item">
+                  <span class="swing-trade__item-name">Access To Day Trading Discord Room (Mobile Friendly)</span>
+                  <div class="swing-trade__item-check swing-trade__item-check--position">
+                    <button class="swing-trade__button swing-trade__button--desktop">Sign up!</button>
+                  </div>
+                  <div class="swing-trade__item-check swing-trade__item-check--position">
+                    <button class="swing-trade__button swing-trade__button--desktop">Sign up!</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer"></footer> 
+  </body> 
 </html>
